<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Welcome</string>


    <string name="app_name">Login and SignUp ScreenDesign Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="remove_me">Remove Me</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="yet_to_build">Yet to build</string>
    <string name="terms_condition_title">Terms and Condition</string>

    <string name="terms_condition">\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a vulputate ex. Donec varius consequat elit a consectetur. \n\n\t Nulla pharetra, nisi eu bibendum sagittis, lacus ante pretium turpis, a ornare leo lacus ac ex. Cras enim nulla, auctor et ex nec, venenatis tristique magna. \n\n\tPellentesque euismod nibh at metus auctor consequat. Proin nisl magna, pellentesque eget tempor et, maximus sit amet ipsum. Cras egestas, orci non ultricies aliquam, justo ex varius velit, quis semper elit turpis ornare ante. Nullam varius turpis tincidunt malesuada sodales. Fusce sit amet ligula vitae massa vehicula rhoncus a id urna. Maecenas non elementum tellus, at fringilla sem. Nulla facilisi. Donec mi quam, ultricies quis suscipit a, faucibus ut nibh. Aenean nec venenatis felis. Mauris dictum commodo mi, sed viverra enim condimentum non. Phasellus quam mi, vestibulum eu convallis eget, tristique id leo. Sed et lobortis velit.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dashboard2">DashboardActivity</string>
    <string name="title_activity_dashboard21">Dashboard2Activity1</string>
    <string name="login_error">Invalid credentials</string>
</resources>